--- a/ReactPrueba.html
+++ b/ReactPrueba.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>tres en raya with react</title>
+    <title>tres en raya with react in development 2</title>
     <link rel="stylesheet" href="index.css">
-
   </head>
   <body>
     <div id="root"></div>
